--- a/index.html
+++ b/index.html
@@ -75,15 +75,22 @@
             z-index: 2; 
         }  
 
-        @media (max-width: 768px) {  
+        @media (max-width: 900px) {  
             h1 {  
                 font-size: 50px;   
             }  
 
             footer {  
                 font-size: 15px;   
-                bottom: 3px;   
+                bottom: 50px;   
             }  
+
+            .beryl{  
+                font-size: 10px; 
+                left: 190px;
+                bottom: 20px; 
+            }
+
         }  
 
         @media (max-width: 480px) {  
