--- a/index.html
+++ b/index.html
@@ -84,9 +84,6 @@
                 font-size: 15px;   
                 bottom: 50px;   
             }  
-
-
-
         }  
 
         @media (max-width: 480px) {  
@@ -98,8 +95,6 @@
                 font-size: 10px;  
                 bottom: 60px;  
             }  
-
-
         }  
 
 
@@ -115,6 +110,7 @@
 </head>  
 <body>  
     <div class="starry-background"></div>  
+    <p class="yes">...yes, they are stars</p>
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
