--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
     <meta charset="UTF-8">  
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
     <title>Maurice Mwenda - Software Engineer</title>  
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">  
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Alkatra:wght@400..700&family=Honk&family=Montserrat+Alternates:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=Press+Start+2P&family=Prosto+One&display=swap" rel="stylesheet">
     <style>  
-        body {  
+        
+        body {	
+            font-family: 'Press Start 2P', sans-serif;
             background-color: black;  
             color: white;  
             display: flex;  
@@ -15,7 +20,6 @@
             align-items: center;  
             height: 100vh;  
             margin: 0;  
-            font-family: 'Montserrat', sans-serif;  
             text-align: center;  
             overflow: hidden;   
         }  
@@ -36,15 +40,6 @@
             background: white; 
             opacity: 0.8; 
         }  
-
-        .beryl{  
-            position: absolute;  
-            bottom: 10px;  
-            left: 10px;  
-            font-size: 15px;  
-            color: red;  
-            z-index: 2;   
-        }
 
         .yes{  
             position: absolute;  
@@ -92,7 +87,7 @@
             }  
 
             footer {  
-                font-size: 10px;  
+                font-size: 8px;  
                 bottom: 60px;  
             }  
         }  
@@ -110,13 +105,13 @@
 </head>  
 <body>  
     <div class="starry-background"></div>  
-    <p class="yes">...yes, they are stars</p>
+    <p class="yes">...Microsoft said "new state of matter", yea right Stark Industries</p>
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
     <footer>  
-        <p>Re-construction by me, ofc</p>  
-        <p>© 2025 Maurice Ndwiga Mwenda [MnM]. All rights reserved.</p>  
+        <p>Re-construction by me </p>  
+        <p>© 2025 Maurice Mwenda [MnM]. All rights reserved.</p>  
     </footer>   
 
     <script src="stars.js"></script>  
