--- a/index.html
+++ b/index.html
@@ -72,23 +72,41 @@
 
         @media (max-width: 900px) {  
             h1 {  
-                font-size: 50px;   
+                font-size: 30px;   
             }  
 
+            .yes{  
+            position: absolute;  
+            top: 10px;  
+            right: 10px;  
+            font-size: 5px;  
+            color: white;  
+            z-index: 2;   
+        }
+        
             footer {  
-                font-size: 15px;   
+                font-size: 10px;   
                 bottom: 50px;   
             }  
         }  
 
         @media (max-width: 480px) {  
             h1 {  
-                font-size: 46px;   
+                font-size: 20px;   
             }  
+
+            .yes{  
+            position: absolute;  
+            top: 10px;  
+            right: 10px;  
+            font-size: 5px;  
+            color: white;  
+            z-index: 2;   
+        }
 
             footer {  
                 font-size: 8px;  
-                bottom: 60px;  
+                bottom: 5px;  
             }  
         }  
 
