--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 </head>  
 <body>  
     <div class="starry-background"></div>  
-    <p class="yes">...Microsoft said "new state of matter", like yea right Stark Industries</p>
+    <p class="yes">..."new state of matter", yea right </p>
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
