--- a/index.html
+++ b/index.html
@@ -134,8 +134,9 @@
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
     <footer>  
-        <p>Re-construction by me </p>  
-        <p>© 2025 Maurice Mwenda [MnM]. All rights reserved.</p>  
+        <p>Reconstruction by yours truly</p>  
+        <p>© 2025 Maurice Mwenda [MnM]. <br> No rights reserved. {Go ahead, steal it. I dare you.}</p>
+ 
     </footer>   
 
     <script src="stars.js"></script>  
