--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 </head>  
 <body>  
     <div class="starry-background"></div>  
-    <p class="yes">...ik you see the vision </p>
+    <p class="yes">...random waves of sadness, so let's install Arch Linux OS🥲 </p>
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
