--- a/index.html
+++ b/index.html
@@ -154,24 +154,44 @@
             margin-top: 15px;
             font-size: 14px;
         }
+
+        .useless-link {
+            background-color: rgb(116, 1, 145);
+            color: rgb(0, 0, 0);
+            font-size: 14px;
+            border: none;
+            padding: 10px 20px;
+            margin-top: 20px;
+            cursor: pointer;
+            font-family: 'Press Start 2P', sans-serif;
+            border-radius: 5px;
+            z-index: 2;
+            display: none;
+        }
+
+        .useless-link:hover {
+            background-color: rgb(174, 6, 216);
+        }
     </style>  
 </head>  
 <body>  
     <div class="starry-background"></div>  
-    <p class="yes">...random waves of sadness, so let's install Arch Linux OS🥲 </p>
+    <p class="yes">...snow bunnies forever </p>
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
 
     <button class="prank-button" id="prankButton">DO NOT CLICK</button>
     <p class="prank-message" id="prankMessage"></p>
+    <br>
+    <a class="useless-link" href="https://theuselessweb.com/"> bored? </a>
  
     <footer>  
         <p>Reconstruction by yours truly</p>  
         <p>© 2025 Maurice Mwenda [MnM]. <br> No rights reserved. {Go ahead, steal it. I dare you.}</p>
     </footer>   
 
-    <script src="stars.js"></script>  
+    <script src="script.js"></script>  
     <script src="prank.js"></script>
 </body>  
 </html>
