--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 </head>  
 <body>  
     <div class="starry-background"></div>  
-    <p class="yes">...lowkey need a mangekyō, anyone down 🙂</p>
+    <p class="yes">...lowkey need a mangekyō, anyone down [🚺] 🙂</p>
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
