--- a/index.html
+++ b/index.html
@@ -172,11 +172,15 @@
         .useless-link:hover {
             background-color: rgb(174, 6, 216);
         }
+
+        .mangekyo{
+            color: #ee0909;
+        }
     </style>  
 </head>  
 <body>  
     <div class="starry-background"></div>  
-    <p class="yes">...lowkey need a mangekyō, anyone down [🚺] 🙂</p>
+    <p class="yes">...lowkey need a <span class="mangekyo">mangekyō</span>, anyone down [🚺] 🙂</p>
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
