--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 </head>  
 <body>  
     <div class="starry-background"></div>  
-    <p class="yes">...lowkey need a <span class="mangekyo">mangekyō</span>, anyone down [🚺] 🙂</p>
+    <p class="yes">...it's all over? <span class="mangekyo">is it?</span></p>
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
