--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
 </head>  
 <body>  
     <div class="starry-background"></div>  
-    <p class="yes">...it's all over? <span class="mangekyo">is it?</span></p>
+    <p class="yes">...I'm trying<span class="mangekyo">I really am</span></p>
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
@@ -195,7 +195,7 @@
         <p>© 2025 Maurice Mwenda [MnM]. <br> No rights reserved. {Go ahead, steal it. I dare you.}</p>
     </footer>   
 
-    <script src="script.js"></script>  
+    <script src="stars.js"></script>  
     <script src="prank.js"></script>
 </body>  
 </html>
