--- a/index.html
+++ b/index.html
@@ -176,11 +176,14 @@
         .mangekyo{
             color: #ee0909;
         }
+        .hope{
+            color: yellow;
+        }
     </style>  
 </head>  
 <body>  
     <div class="starry-background"></div>  
-    <p class="yes">...I'm trying,<span class="mangekyo"> I really am</span></p>
+    <p class="yes">~I'd rather <span class="hope">live on my feet</span> than<span class="mangekyo"> die on my knees</span></p>
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
