--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 </head>  
 <body>  
     <div class="starry-background"></div>  
-    <p class="yes">~I'd rather <span class="hope">live on my feet</span> than<span class="mangekyo"> die on my knees</span></p>
+    <p class="yes">~Go find your <span class="hope">生きがい</span></p>
     <div>  
         <h1>Under MAJOR Re-Construction</h1>  
     </div>  
